tests/miniJava/neg/006456_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while this ( 0 ) { } } }
